Bug 565949 - Use Long.valueOf and Double.valueOf where possible
Change-Id: I9553166260b836f09f7b53b7bd4bcdbd09574810
Signed-off-by: Thomas Watson <tjwatson@us.ibm.com>